# grtool

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  cmdline.h  dlib_trainers.h  doctest.py  extract.cpp  grt-info.cpp  grt-predict.cpp  grt-score.cpp  grt-train.cpp  grt.cpp  grt_crf.cpp  grt_crf.h  grtool.cpp  info.cpp  libgrt_util.h  mkvscore  montage  pack  pack2  plot  plot2  postprocess  predict-dlib.cpp  predict-skl  predict.cpp  preprocess.cpp  preprocess.py  score-timeline  score-tl  score-tool  score-tr  score.cpp  segment  test.cpp  train-dlib.cpp  (+4 more)
doc/: extract.md  grt.md  info.md  pack.md  postprocess.md  predict-skl.md  predict.md  preprocess.md  recording.md  score-tool.md  score-tr.md  score.md  train-skl.md  train.md  tutorial.md  unpack.md
regression/: extract-r1.grt  extract.md  pack-r1.md  pack-r2.md  score-r1.data  score.md  train.md  unpack-r1.ass  unpack-r1.md  unpack-r1.mkv  unpack-r1.srt  unpack-r2.ass  unpack-r2.flac  unpack-r2.md  unpack-r3.md  unpack-r3.mkv
